# kuksa-incubation

./: .gitignore  .gitmodules  NOTICE.md  README.md
.github/workflows/: README.md  check_license.yml  hvac_integration_test.yml  hvac_service.yml  kuksa_cpp_client.yaml  kuksa_go_client.yaml  lint.yml  release.yml  seat_integration_test.yml  seat_service.yml  seat_service_debug_build.yml  seat_service_docu_build.yml  seat_service_release_build.yml  seat_service_seatctrl_test.yml
.github/workflows/scripts/: seat-install-ci-tooling.sh
can-protocol-adapter/: Cargo.toml  Dockerfile  README.md  build.sh  config.json
can-protocol-adapter/dbc/: obd2_isotp_11bit.dbc  obd2_isotp_29bit.dbc
can-protocol-adapter/doc/: configuration.md  v0.1.0-initial-version.md
can-protocol-adapter/lib/: Cargo.toml
can-protocol-adapter/scripts/: can_isotp_simulation.sh
can-protocol-adapter/src/: main.rs
can-protocol-adapter/src/can/: comm.rs  decoder.rs  mod.rs  socket.rs
can-protocol-adapter/src/databroker-proto/: Cargo.toml
can-protocol-adapter/src/grpc/: mod.rs
can-protocol-adapter/src/grpc/sdv_databroker_v1/: mod.rs
can-protocol-adapter/src/kuksa_feeder/: feeder.rs  mod.rs
can-protocol-adapter/src/kuksa_provider/: mod.rs  provider.rs
can-protocol-adapter/src/utils/: adapter_config.rs  adapter_utils.rs  mod.rs
ecal2val/: README.md
fone2val/: README.md  carTelemetry_feeder.py  test.py  test.py~  test2.py  test2.py~
fone2val/config/: carTelemetry_feeder.ini
gRPC-on-ESP32/: .gitignore  CMakeLists.txt  NOTICE.md  README.md  compile_proto.sh  install_nanopb.sh
gRPC-on-ESP32/.devcontainer/: Dockerfile  devcontainer.json
gRPC-on-ESP32/main/: CMakeLists.txt  decoder.c  decoder.h  encoder.c  encoder.h  grpc.c  grpc.h  idf_component.yml  main.c
gRPC-on-ESP32/proto/: types.proto  val.proto
hvac_service/: Dockerfile  README.md  docker-build.sh  prerequisite_settings.json
hvac_service/.devcontainer/: devcontainer.json
hvac_service/integration_test/: it-config  it-hvac-cli.sh  it-setup.sh
hvac_service/integration_test/volumes/dbc2val/mapping/: README.md
kuksa-cpp-client/: .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ReadMe.md  conanfile.py  justfile
kuksa-cpp-client/cmake/: config.cmake  kuksaclientConfig.cmake.in
kuksa-cpp-client/data/vss-core/: vss_release_2.1.json  vss_release_2.2.json  vss_release_3.1.1.json
kuksa-cpp-client/example/: CMakeLists.txt  example_v1.cpp  example_v2.cpp
kuksa-cpp-client/include/: kuksaclient.h
kuksa-cpp-client/src/: CMakeLists.txt  generate.cmake  kuksa_client.cpp
kuksa-persistence-provider/: Cargo.toml  Readme.md  config.json  statestore.json
kuksa-persistence-provider/src/: kuksaconnector.rs  main.rs  storage.rs
kuksa-persistence-provider/src/storage/: filestorage.rs
kuksa_go_client/: .gitignore  README.md  client_test.go  go.mod  go.sum  kuksa-client-grpc.json  kuksa-client-ws.json  main.go
kuksa_go_client/kuksa_client/: backend.go  commn.go  config.go  grpc.go  ws.go
kuksa_go_client/proto/kuksa/val/v1/: README.md  val.proto
kuksa_go_client/protocInstall/: protocInstall.go
seat_service/: Dockerfile  README.md  build-debug.sh  build-release.sh  docker-build.sh
seat_service/.devcontainer/: Dockerfile  devcontainer.json
seat_service/integration_test/: README.md  it-config  it-setup.sh  setup.py
seat_service/src/lib/broker_feeder/: CMakeLists.txt
zenoh-kuksa-provider/: .dockerignore  .gitignore  Cargo.toml  DEFAULT_CONFIG.json5  Dockerfile  README.md
zenoh-kuksa-provider/src/: main.rs  provider_config.rs
zenoh-kuksa-provider/src/utils/: kuksa_utils.rs  metadata_store.rs  mod.rs  zenoh_utils.rs
