########################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
########################################################################

[package]
name = "can-protocol-adapter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size
lto = true  #Enable link time Optimization

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.10.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socketcan-isotp = "1.0.2"
tonic = "0.11.0"
databroker-proto = { path = "src/databroker-proto"}
kuksa-common = { path = "lib/common"}
kuksa = { path = "lib/kuksa"}
can-dbc="6.0.0"
codegen = "0.2"
byteorder = "1.3"
http = "0.2.8"
