[package]
name = "kuksa-persistence-provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
tinyjson = "2.5.1"
kuksa = { git = "https://github.com/eclipse-kuksa/kuksa-databroker.git", branch = "feature/refactor_kuksa_crate", package = "kuksa" }
log = "0.4.22"
env_logger = "0.11.5"
regex = "1.11.0"
#Only this version is compatible with kuksa crate. 0.13 is not
prost-types = "0.11.9"
tokio = { version="1.40.0",  features = ["full"] }

#Still broken due to closed repo
#djson = { git="https://github.com/dependix/platform.git" ,  optional = true }
djson = { path="platform/modules/json-al/djson_rust/" ,  optional = true }

[features]
# use djson library
djson = [ "dep:djson" ]
