########################################################################
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
########################################################################

[package]
name = "zenoh-kuksa-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
env_logger = "0.10.2"
json5 = "0.4.1"
kuksa = { git = "https://github.com/eclipse-kuksa/kuksa-databroker.git", branch = "feature/refactor_kuksa_crate", package = "kuksa" }
log = "0.4.21"
prost-types = "0.11.9"
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
zenoh = { version = "1.0.0" }
